--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -12,7 +12,7 @@
 
 	&__nav {
 		& a {
-			color: var(--text-color-second);
+			color: var(--text-color-2);
 			font-family: "Inter", sans-serif;
 			font-size: 16px;
 			font-weight: 300;
