--- a/src/sass/_title.scss
+++ b/src/sass/_title.scss
@@ -6,7 +6,7 @@
 		text-align: center;
 		font-family: "Circular Std", sans-serif;
 		font-size: 96px;
-		color: var(--text-color-second);
+		color: var(--text-color-2);
 	}
 
 	&__subtitle {
