--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,9 @@
 :root {
 	--text-color-main: #000000;
-	--text-color-second: #050038;
+	--text-color-2: #050038;
+	--text-color-3: #5B5E6D;
 	--text-color-reverse: #ffffff;
-	--button-color: #0555FF;
+	--button-color: 5, 85, 255;
 	--shadow-color: #d4d4d4;
+	--color-bg: rgba(0, 0, 0, 0.1);
 }
