--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,9 +1,11 @@
 :root {
 	--text-color-main: #000000;
 	--text-color-2: #050038;
-	--text-color-3: #5B5E6D;
+	--tex-color-3: #5B5E6D;
 	--text-color-reverse: #ffffff;
+	--text-color-footer: #7884A6;
 	--button-color: 5, 85, 255;
 	--shadow-color: #d4d4d4;
 	--color-bg: rgba(0, 0, 0, 0.1);
+	--color-icon: #C4C4C4;
 }
