--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -58,9 +58,13 @@
 			width: 1320px;
 			margin: 0 auto;
 			display: flex;
-			// justify-content: space-between;
+			justify-content: space-between;
 			align-items: center;
 			flex-direction: row;
+
+			// &:nth-child(2) {
+			// 	justify-content: left;
+			// }
 
 			& h2 {
 				margin: 0;
