--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -55,10 +55,10 @@
 		flex-direction: column;
 
 		&__element {
-			width: 1320px;
+			width: 100%;
 			margin: 0 auto;
 			display: flex;
-			justify-content: space-between;
+			justify-content: center;
 			align-items: center;
 			flex-direction: row;
 
