--- a/src/sass/_testimonials.scss
+++ b/src/sass/_testimonials.scss
@@ -24,10 +24,10 @@
 		margin-top: 70px;
 		display: flex;
 		flex-wrap: wrap;
-		justify-content: space-around;
+		justify-content: center;
 	}
 
 	&__tweet {
-		padding-bottom: 30px;
+		padding: 15px 15px;
 	}
 }
