--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,5 +1,6 @@
 .about {
 	margin-top: 100px;
+	margin-bottom: 150px;
 	text-align: center;
 
 	&__title {
@@ -58,56 +59,54 @@
 			width: 100%;
 			margin: 0 auto;
 			display: flex;
-			justify-content: center;
+			justify-content: flex-end;
 			align-items: center;
 			flex-direction: row;
 
-			// &:nth-child(2) {
-			// 	justify-content: left;
-			// }
+			&:nth-child(2) {
+				justify-content: flex-start;
 
-			& h2 {
-				margin: 0;
-				font-family: 'Circular Std', sans-serif;
-				font-weight: 700;
-				font-size: 72px;
-			}
-
-			& p {
-				font-family: 'Inter', sans-serif;
-				font-weight: 100;
-				font-size: 20px;
-				text-align: left;
-			}
-
-			& a {
-				font-family: 'Inter', sans-serif;
-				font-size: 18px;
-				font-weight: 300;
-			}
-
-			& img {
-				position: relative;
-				left: 11%;
-			}
-
-			&-reverse {
-				& .about__features__text {
-					margin-left: 0;
-				}
-
-				& img {
-					position: relative;
-					left: auto;
-					right: 11%;
+				&.about__features__text {
+					// margin-left: 30px;
 				}
 			}
 		}
 
+		& h2 {
+			margin: 0;
+			font-family: 'Circular Std', sans-serif;
+			font-weight: 700;
+			font-size: 72px;
+		}
+
+		& p {
+			font-family: 'Inter', sans-serif;
+			font-weight: 100;
+			font-size: 20px;
+			text-align: left;
+			line-height: 1.5;
+		}
+
+		& a {
+			display: inline-block;
+			margin-top: 10px;
+			font-family: 'Inter', sans-serif;
+			font-size: 18px;
+			font-weight: 300;
+			border-bottom: 2px solid var(--color-underline);
+		}
+
+		& img {
+			width: 44%;
+			// position: relative;
+			// left: 11%;
+			// Смещает изображение
+		}
 
 		&__text {
-			max-width: 510px;
-			margin-left: 150px;
+			width: 40%;
+			// max-width: 510px;
+			margin-left: 100px;
 			text-align: left;
 		}
 	}
