--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -336,21 +336,57 @@
 		justify-content: space-around;
 
 		&__nav {
-			display: none;
-			height: 50%;
-			width: 100vw;
+			display: flex;
+			flex-direction: column;
+
+			& a {
+				padding: 5px 0;
+			}
 		}
 
 		&__login {
+			display: flex;
+			flex-direction: column;
+
+			& button {
+				margin-top: 20px;
+			}
+		}
+
+		&__menu {
 			// display: none;
+			margin-top: 10px;
+			position: absolute;
+			top: -100%;
+			justify-content: space-evenly;
+			height: 20vh;
+			text-align: center;
+			background: var(--text-color-reverse);
+			width: 100%;
+			transition: 1s all;
+
+			&__active {
+				top: 0;
+				transition: 1s all;
+			}
+		}
+
+
+		&__hamburger {
+			display: block;
+			font-family: "Roboto", sans-serif;
+			font-size: 18px;
+			font-weight: 300;
+			padding: 15px 32px;
+			box-shadow: 0px 0px 20px var(--shadow-color);
 		}
 	}
 
 	.title {
-		margin-top: 40px;
+		margin-top: 53px;
 
 		&__title {
-			margin-top: 20px;
+			margin-top: 22px;
 			font-size: 36px;
 		}
 
